test(PR-F): 端到端对齐验证测试（SQLite + CryptoSignatureIntegrationTest）
新增 CryptoSignatureIntegrationTest，验证 mybatis-enhance 的加密/签名/解密
流程与 mybatis-plus-enhance 行为一致。

| 测试 | 验证内容 |
| --- | --- |
| shouldEncryptInsertAndDecryptSelectAcrossSessions | insert→selectById(解密明文)→selectIgnoreDecryptById(原始密文) |
| shouldSignAndVerifyAcrossBatchQuery | 批量 insert→selectList(验签)→selectIgnoreDecryptBatchIds(密文) |
| shouldFireSqlObservationOnQuery | SqlObservationSink 正确拦截 SQL 执行 |

- SQLite 内存库（无外部依赖）
- 标准 MyBatis Configuration（非 MybatisConfiguration）
- MybatisEnhanceInterceptor 作为拦截器链入口
- DataEncryptionInnerInterceptor + DataSignatureInnerInterceptor + DataDecryptionInnerInterceptor
- CryptoMapper extends EnhanceMapper + XML mapper（SQLite 兼容 SQL）
- @EncryptedField + @TableSignature + @TableSignatureField 注解（与 Plus 版同名）

- 重新应用 PR-A2/A3 的拦截器重命名（straggler cleanup 期间被 revert）
- 修正 52 个文件的 PR-A1 遗留路径迁移
- 修正 MybatisEnhanceInterceptor 内部 import

37 个测试全绿（5 core + 7 extension + 16 typehandler + 7 spring + 3 integration）
BUILD SUCCESS

14 files changed, 412 insertions(+), 49 deletions(-)